Fixes #141 - Remove grid style from EasyDropdown toggle, improve logic around wrapping children in a Button, add flex style for Button body string when Button.Addon is present

--- a/src/components/EasyDropdown/style.css
+++ b/src/components/EasyDropdown/style.css
@@ -2,12 +2,6 @@
   display: inline-block;
 }
 
-.toggle {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 100%;
-}
-
 .group {
   border-top: var(--rvr-border-width-md) solid var(--rvr-gray-lite-5);
 }
